--- a/CNewsProject/Views/Shared/Components/NewsLetterSettings/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/NewsLetterSettings/Default.cshtml
@@ -1,2 +1,109 @@
+@using CNewsProject.StaticTempData
+@using Stripe
+@model NLUserSetting
+}
+
+<div>
+    @{ // Vars and Setup
+        
+        int count = 1;
+        List<string> authorNames = new();
+        List<string> subscribedTo = new();
+        
+        var dynAuthorList = ViewBag.authorList;
+        foreach (var item in dynAuthorList)
+        {
+            authorNames.Add(item);
+        }
+        
+        var dynSubscribedTo = ViewBag.subscribedTo;
+        foreach (var item in dynSubscribedTo)
+        {
+            subscribedTo.Add(item);
+        }
+
+        SearchBarSetting authorSearchSetting = new(authorNames, "author", "TEMP", "Author");
+        
+    }
+    
+    <h5 id="personalisedSettingsHitBox" class="c-hover-pointer c-nonselectable">Personalised News Letter</h5>
+
+    <div id="personalisedSettingsTarget" class="c-hidden">
+        <div class="row">
+            <form asp-action="UpdateNewsLetterSetting" method="post">
+
+                <div>
+                    <label class="col-9" asp-for="Latest">Include Latest News</label>
+                    <input class="offset-1 col-1" asp-for="Latest"></input><br/>
+                </div>
+                <div>
+                    <label class="col-9" asp-for="Popular">Include Popular News</label>
+                    <input class="offset-1 col-1" asp-for="Popular"></input><br/>
+                </div>
+
+                <div>
+                    <h6 style="font-weight: bold">
+                        Included Categories
+                    </h6>
+                </div>
+                <input asp-for="CategoryIds"></input>
+                <input name="authorNames" type="hidden"/>
+
+                <div id="authorNamesHitBox" class="c-hover-pointer c-nonselectable">
+                    <h4 style="font-weight: bold;">Subscribed Authors</h4>
+                </div>
+                <div id="authorNamesTarget">
+                    @{
+                        <div id="authorNamesContainer">
+                            @{
+                                if (Model.AuthorNames != null)
+                                {
+                                    List<string> elems = new();
+
+                                    foreach (var item in Model.AuthorNames)
+                                    {
+                                        string tempId = "authorNameItem" + Convert.ToString(count);
+                                        elems.Add(tempId);
+                                        <div id="@tempId">
+                                            <p>
+                                                @item<span style="color: red">&#10006;</span>
+                                            </p>
+                                        </div>
+                                    }
+                                }
+                            }
+                        </div>
+                        
+                        
+
+                        <partial name="_searchBarWithSuggestionsPartial" model="authorSearchSetting"/>
+                    }
+                </div>
+
+                <br/>
+                <button class="btn btn-primary">Update</button>
+            </form>
+        </div>
 
 
+    </div>
+
+</div>
+
+
+<script src="/js/cscripts.js"></script>
+<script type="text/javascript">
+    
+    AddToggleableElementId("personalisedSettingsHitBox","personalisedSettingsTarget");
+    AddToggleableElementId("authorNamesHitBox","authorNamesTarget");
+        
+    document.addEventListener("DOMContentLoaded", function () {
+        const authorNames = @Html.Raw(Json.Serialize(@authorNames))
+        let iterations = Number(@authorNames.Count());
+        
+        console.log(iterations);
+        for (let i = 0; i > iterations; i++){
+            
+        } 
+    });
+</script>
