--- a/CNewsProject/wwwroot/css/site.css
+++ b/CNewsProject/wwwroot/css/site.css
@@ -1,9 +1,8 @@
-
-.navfire {
-    background-image: url(/content/images/highqualitynavbar.png);
-    background-repeat: repeat;
-    background-size: 166px 75px;
-}
+/*.navfire {*/
+/*    background-image: url(/content/images/highqualitynavbar.png);*/
+/*    background-repeat: repeat;*/
+/*    background-size: 166px 75px;*/
+/*}*/
 
 
 .hoverable {
@@ -13,6 +12,10 @@
 
 .hoverable:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
+}
+
+.c-hover-pointer:hover{
+    cursor: pointer;
 }
 
 .unlink {
@@ -83,6 +86,24 @@
     margin-right: 1px;
 }
 
+.c-hidden {
+    display: none; !important;
+}
+
+.c-nonselectable {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.c-clickable-toggle-target{
+    
+}
+
+.c-clickable-toggle{
+    
+}
 /* FUCKS the NAVBAR Hamburger Menu up*/
 /*.nav-link {*/
 /*    height: 60px;*/
@@ -98,8 +119,10 @@
 /*}*/
 
 /*form stripe style*/
-<
-style >
+
+/*FAKE REGION - THIS MIGHT REALLY MESS UP STUFF */
+
+
 #payment-form {
     max-width: 600px;
     margin: 0 auto;
@@ -144,13 +167,13 @@ style >
     z-index: 1000;
 }
 
-.border-gradient{
+.border-gradient {
     border-width: 0px 0px 4px 0px;
     border-style: solid;
     border-image: linear-gradient(to right, rgba(0, 128, 128, 1) 0%, rgba(0, 40, 77, 1) 100%) 1;
 }
 
-</style >
+/*FAKE REGION END - THIS MIGHT REALLY MESS UP STUFF */
 
 #authorSuggestions {
     position: absolute;
@@ -164,6 +187,6 @@ style >
     cursor: pointer;
 }
 
-    .list-group-item:hover {
-        background-color: #f0f0f0;
-    }
+.list-group-item:hover {
+    background-color: #f0f0f0;
+}
