--- a/CNewsProject/Views/Admin/Users.cshtml
+++ b/CNewsProject/Views/Admin/Users.cshtml
@@ -29,7 +29,7 @@
                 </a>
             </td>
             <td>
-                <a class="btn btn-sm btn-primary" asp-action="EditUser" asp-route-id="@user.Id">
+                <a class="btn btn-sm btn-primary" asp-action="AdminEdit" asp-route-id="@user.Id">
                     Edit
                 </a>
             </td>
