--- a/CNewsProject/wwwroot/css/site.css
+++ b/CNewsProject/wwwroot/css/site.css
@@ -83,6 +83,49 @@
     margin-right: 1px;
 }
 
+/*Stripe*/
+.shamsForm {
+    background: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+}
+
+.shamsButton {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 100%;
+}
+
+    .shamsButton:hover {
+        background-color: #45a049;
+    }
+
+.formDiv {
+    margin-bottom: 20px;
+}
+
+.shamsLabel {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+.shamsSelect {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: cornsilk;
+}
+
 /* FUCKS the NAVBAR Hamburger Menu up*/
 /*.nav-link {*/
 /*    height: 60px;*/
@@ -97,73 +140,3 @@
 /*    */
 /*}*/
 
-/*form stripe style*/
-<
-style >
-#payment-form {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-}
-
-.form-control {
-    border-radius: 4px;
-}
-
-.btn-success {
-    background-color: #28a745;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 4px;
-}
-
-.btn-success:hover {
-    background-color: #218838;
-}
-
-#card-element {
-    padding: 10px;
-    border-radius: 4px;
-    border: 1px solid #ced4da;
-    margin-bottom: 10px;
-}
-
-#card-errors {
-    color: red;
-}
-
-#border-gradient {
-    margin-top: 200px;
-    height: 4px;
-    background: linear-gradient(90deg, rgba(0, 128, 128, 1) 0%, rgba(0, 40, 77, 1) 100%);
-    z-index: 1000;
-}
-
-.border-gradient{
-    border-width: 0px 0px 4px 0px;
-    border-style: solid;
-    border-image: linear-gradient(to right, rgba(0, 128, 128, 1) 0%, rgba(0, 40, 77, 1) 100%) 1;
-}
-
-</style >
-
-#authorSuggestions {
-    position: absolute;
-    width: 200px;
-    z-index: 1000;
-    background-color: white;
-    border: 1px solid #ccc;
-}
-
-.list-group-item {
-    cursor: pointer;
-}
-
-    .list-group-item:hover {
-        background-color: #f0f0f0;
-    }
