--- a/CNewsProject/Views/Shared/_ArticlePartial.cshtml
+++ b/CNewsProject/Views/Shared/_ArticlePartial.cshtml
@@ -1,7 +1,12 @@
 @model Article
 
+@{
+    string newImageLink = Model.ImageLink.Replace("images", "images-sm");
+    string newImageLink2 = Model.ImageLink.Replace("images", "images-md");
+}
+
 <a class="card mb-4 w-100 hoverable unlink c-link-hover-container" asp-controller="News" asp-action="Article" asp-route-id="@Model.Id">
-    <img class="card-img-top" src="@Model.ImageLink" alt="@Model.Headline" >
+    <img class="card-img-top" src="@newImageLink" alt="@Model.Headline" >
 
     <div class="card-body">
         <h5 class="card-title c-link-hover">@Model.Headline</h5>
