--- a/CNewsProject/Views/Admin/Index.cshtml
+++ b/CNewsProject/Views/Admin/Index.cshtml
@@ -5,3 +5,4 @@
 <a class="btn btn-primary" asp-action="Roles">Roles</a>
 <a class="btn btn-primary" asp-action="Users">Users</a>
 <a class="btn btn-primary" asp-action="SubscriptionTypes">Subscriptions</a>
+<a class="btn btn-primary" asp-action="Statistics">Statistics</a>
