--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -53,9 +53,9 @@
                 <button class="btn btn-primary" type="submit">Search</button>
             </form>
             <div class="d-md-none">
-                <div class="mt-1 mb-1" id="VCWeather">
+                @* <div class="mt-1 mb-1" id="VCWeather">
                     <vc:weather></vc:weather>
-                </div>
+                </div> *@
                 <div class="mb-1" id="ExchangeVCDiv">
                     @*This Is Now Updated. Only loads data from API if data is old*@
                     <vc:exchange></vc:exchange>
