--- a/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
@@ -39,7 +39,7 @@
             }
         </table><br/>
         <div style="background-color:#dee6ef;">
-            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Sweden">
                 <h2>Sweden News</h2>
             </a>
         </div>
@@ -56,7 +56,7 @@
             }
         </table><br/>
         <div style="background-color:#dee6ef;">
-            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="World News">
                 <h2>World News</h2>
             </a>
         </div>
@@ -73,7 +73,7 @@
             }
         </table><br/>
         <div style="background-color:#dee6ef;">
-            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Economy News">
                 <h2>Economy News</h2>
             </a>
         </div>
@@ -90,7 +90,7 @@
             }
         </table><br/>
         <div style="background-color:#dee6ef;">
-            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Sport News">
                 <h2>Sport News</h2>
             </a>
         </div>
