--- a/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
+++ b/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
@@ -5,7 +5,7 @@
 
     string currentSelected = "Categories";
 
-    if (currentController == "News")
+    if (currentController == "News" && currentAction != "Author")
     {
         if (currentAction == "Index")
             currentSelected = "Latest";
