I added WeatherHistory to the navbar.

--- a/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
+++ b/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
@@ -34,5 +34,7 @@
 
         <a id="sport" class="dropdown-item" asp-controller="News" asp-action="Sport">Sport</a>
 
+        <a id="weatherHistory" class="dropdown-item" asp-controller="Weather" asp-action="WeatherHistory">Weather History</a>
+
     </div>
 </li>
