--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -64,7 +64,7 @@
                             @Model.current.temperature_2m // <p>Temperature: @Model.hourly.temperature_2m[hour] °C</p>
                         }
                     }
-                    °C or @tempFaren°F </br>
+                    °C or @tempFaren°F <br />
                     @conditionStr <img src="~/content/images/weatherpics/@weatherPic"/>
                 </p>
                 <p>Humidity: @humidity%</p>
