changed look of sidebar

--- a/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
@@ -3,7 +3,7 @@
 <div class="accordion">
     <div class="card accordion-item">
         <div class="accordion-header" id="headingExch">
-            <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseExch" aria-expanded="true" aria-controls="collapseExch">
+            <button class="accordion-button c-gradient-90 text-light" data-bs-toggle="collapse" data-bs-target="#collapseExch" aria-expanded="true" aria-controls="collapseExch">
                 <h3>Exchange rates</h3>
             </button>
         </div>
